Interpolation and some data formatting added

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,40 +1,53 @@
 <div class="card">
     <div class="card-header">
-        Product List:
+        {{productsPageTitle}}
     </div>
 
     <div class="card-body">
         <div class="row">
             <div class="col-md-2">Filter by:</div>
             <div class="col-md-4">
-                <input type="text" />
+                <input type="text"
+                    [(ngModel)]="listFilter" />
             </div>
         </div>
         <div class="row">
             <div class="col-md-6">
-                <h4>Filtered by:</h4>
+                <h4>Filtered by: {{listFilter}}</h4>
             </div>
         </div>
     </div>
 
     <div class="table-responsive">
-        <table class="table">
+        <table class="table" *ngIf="products && products.length">
             <thead>
                 <tr>
                     <th>
-                        <button class="btn btn-primary">
-                            Show Image
+                        <button class="btn btn-primary"
+                            (click)="toggleImage()">
+                            {{showImage ? 'Hide' : 'Show'}} Image
                         </button>
                     </th>
                     <th>Code</th>
                     <th>Product</th>
-                    <th>Available</th>
+                    <th>Stock Available</th>
                     <th>Price</th>
                     <th>Star Rating</th>
                 </tr>
             </thead>
             <tbody>
-                
+                <tr *ngFor="let prod of products">
+                    <td>
+                        <img *ngIf = "showImage"
+                            [src]="prod.ImageFile" title={{prod.Description}}
+                            [style.width.px]="imageWidth" [style.height.px]="imageHeight" [style.margin.px]="imageMargin" />
+                    </td>
+                    <td>{{prod.ProductCode | uppercase}}</td> <!-- lowercase -->
+                    <td>{{prod.ProductName}}</td>
+                    <td>{{prod.ItemCount}}</td>
+                    <td>{{prod.Price | currency:'USD':'symbol':'1.2-2'}}</td>
+                    <td>{{prod.StarRating}}</td>
+                </tr>
             </tbody>
         </table>
     </div>
